--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="formulario__titulo">ATENCION NO PRESENCIAL</h1>
       <h3 class="formulario__subtitulo">Consultas y Trámites</h3>
       <p class="formulario__parrafo">
-        Llena este pequeño formulario para iniciar la gestión.
+        Para iniciar el chat completá este breve formulario.
       </p>
 
       <label for="contribuyente" class="formulario__label"
@@ -57,7 +57,7 @@
 
       <div id="respuesta"></div>
 
-      <button id="submit" class="formulario__submit">Enviar a WhatsApp</button>
+      <button id="submit" class="formulario__submit">Iniciar WhatsApp</button>
     </form>
     <script src="js/form.js"></script>
   </body>
