--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       />
 
       <label for="celular" class="formulario__label"
-        >Ingresá tu N° de celular</label>
+        >Ingresá tu N° de celular (el que utilizas para esta consulta)</label>
       
       <input
         id="celular"
