--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="formulario__titulo">ATENCION NO PRESENCIAL</h1>
       <h3 class="formulario__subtitulo">Consultas y Trámites</h3>
       <p class="formulario__parrafo">
-        Para iniciar el chat completá este breve formulario.
+        Para iniciar el chat completá este breve formulario. Ingresá datos correctos y precisos, por favor.
       </p>
 
       <label for="contribuyente" class="formulario__label"
@@ -34,7 +34,7 @@
         id="celular"
         type="number"
         class="formulario__input"
-        placeholder="El que utilizas para la consulta"
+        placeholder="Si sos MANDATARIO por favor ingresá tú número de celular)"
       />
       
       <label for="caracter" class="formulario__label"
