--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         id="contribuyente"
         type="text"
         class="formulario__input"
-        placeholder="Indica cuál es tu nombre completo"
+        placeholder="Indica cuál es tu nombre completo (El tuyo)"
       />
 
       <label for="celular" class="formulario__label"
-        >Ingresá tu N° de celular (el que utilizas para esta consulta)</label>
+        >Ingresá tu N° de celular (No otro)</label>
       
       <input
         id="celular"
         type="number"
         class="formulario__input"
-        placeholder="Si sos MANDATARIO por favor ingresá tú número de celular)"
+        placeholder="Si sos MANDATARIO ingresá igual tú número de celular"
       />
       
       <label for="caracter" class="formulario__label"
@@ -52,7 +52,7 @@
       id="CUIT"
       type="number"
       class="formulario__input"
-      placeholder="Ingresá tu CUIT o el de tu representado"
+      placeholder="Ingresá el CUIT que corresponda"
       />
 
       <div id="respuesta"></div>
