--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       />
 
       <label for="celular" class="formulario__label"
-        >Ingresá tu N° de celular (No otro)</label>
+        >Ingresá tu N° de celular </label>
       
       <input
         id="celular"
@@ -52,7 +52,7 @@
       id="CUIT"
       type="number"
       class="formulario__input"
-      placeholder="Ingresá el CUIT que corresponda"
+      placeholder="Ingresá tu CUIT o el de tu representado"
       />
 
       <div id="respuesta"></div>
