--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         id="contribuyente"
         type="text"
         class="formulario__input"
-        placeholder="Indica cuál es tu nombre completo (El tuyo)"
+        placeholder="Indica cuál es tu nombre completo"
       />
 
       <label for="celular" class="formulario__label"
@@ -34,7 +34,7 @@
         id="celular"
         type="number"
         class="formulario__input"
-        placeholder="Si sos MANDATARIO ingresá igual tú número de celular"
+        placeholder="El que utilizas para la consulta"
       />
       
       <label for="caracter" class="formulario__label"
